--- a/NumberGuesser/NumberGuesser/MainWindow.xaml
+++ b/NumberGuesser/NumberGuesser/MainWindow.xaml
@@ -11,8 +11,8 @@
         <TextBox x:Name="EnterTextbox" HorizontalAlignment="Left" Margin="88,226,0,0" Text="TextBox" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="You get 20 guesses to try and find the number!" HorizontalAlignment="Left" Margin="295,82,0,0" VerticalAlignment="Top" Width="282" HorizontalContentAlignment ="Center"/>
         <RadioButton x:Name="babybutton" Content="Baby Difficulty" HorizontalAlignment="Left" Margin="541,200,0,0" VerticalAlignment="Top" GroupName="Diff" Checked="babybutton_Checked"/>
-        <RadioButton x:Name="toddlerbutton" Content="Toddler Difficulty" HorizontalAlignment="Left" Margin="541,220,0,0" VerticalAlignment="Top" GroupName="Diff"/>
-        <RadioButton x:Name="adultbutton" Content="Adult Difficulty" HorizontalAlignment="Left" Margin="541,240,0,0" VerticalAlignment="Top" GroupName="Diff"/>
+        <RadioButton x:Name="toddlerbutton" Content="Toddler Difficulty" HorizontalAlignment="Left" Margin="541,220,0,0" VerticalAlignment="Top" GroupName="Diff" Checked="toddlerbutton_Checked"/>
+        <RadioButton x:Name="adultbutton" Content="Adult Difficulty" HorizontalAlignment="Left" Margin="541,240,0,0" VerticalAlignment="Top" GroupName="Diff" Checked="adultbutton_Checked"/>
         <Label Content="Select Difficulty" HorizontalAlignment="Left" Margin="528,175,0,0" VerticalAlignment="Top" Width="120" HorizontalContentAlignment ="Center" FontWeight="Bold"/>
         <Label x:Name="EnterLabel" Content="Enter Your Guess Below" HorizontalAlignment="Left" Margin="67,195,0,0" VerticalAlignment="Top" Width="162" HorizontalContentAlignment ="Center" RenderTransformOrigin="0.5,0.5">
             <Label.RenderTransform>
